<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".forecastActivity">

    <TextView
            android:text="@string/humidity_text"
            android:layout_width="110dp"
            android:layout_height="21dp"
            android:id="@+id/humidity_text3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temperature_text2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/weather_activity"
            android:layout_width="200dp"
            android:layout_height="34dp"
            android:id="@+id/appText" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.497" android:textSize="24sp" android:textAlignment="center"/>
    <Button
            android:text="@string/backButton"
            android:layout_width="380dp"
            android:layout_height="57dp"
            android:id="@+id/button3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="close"/>
    <TextView
            android:text="@string/empty_text"
            android:layout_width="110dp"
            android:layout_height="21dp"
            android:id="@+id/location" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:textSize="18sp" android:textStyle="bold" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/appText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/temperature_text"
            android:layout_width="110dp"
            android:layout_height="21dp"
            android:id="@+id/temperature_text2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/location"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/temperature"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/appText"
            android:text="@string/empty_text"
            app:layout_constraintStart_toEndOf="@+id/temperature_text2" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.006"/>
    <TextView
            android:text="@string/status_text"
            android:layout_width="110dp"
            android:layout_height="21dp"
            android:id="@+id/humidity_text" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/humidity_text3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/status" app:layout_constraintStart_toEndOf="@+id/humidity_text"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.006" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/humidity"/>
    <TextView
            android:text="@string/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/humidity" app:layout_constraintStart_toEndOf="@+id/humidity_text3"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.006" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/temperature"/>
    <TextView
            android:text="@string/change_city_text"
            android:layout_width="187dp"
            android:layout_height="37dp"
            android:id="@+id/change_city_text" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/humidity_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/empty_text"
            android:ems="10"
            android:id="@+id/new_city_text" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/change_city_text" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button4"/>
    <Button
            android:text="@string/update_text"
            android:layout_width="127dp"
            android:layout_height="47dp"
            android:id="@+id/updateButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/change_city_text"
            android:onClick="updateLocation"/>
</android.support.constraint.ConstraintLayout>