<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GPSLocationActivity">

    <TextView
            android:text="@string/gps_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gpsTitle" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gpsDescription"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintTop_toBottomOf="@+id/searchGPSlocationButton"/>
    <Button
            android:text="@string/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchGPSlocationButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gpsTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:onClick="search" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/clearDataBaseButton"/>
    <fragment
            android:layout_width="396dp"
            android:layout_height="612dp"
            android:id="@+id/mapView2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            tools:context=".MapsActivity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gpsDescription"/>
    <Button
            android:text="@string/clear_db_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearDataBaseButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/gpsTitle"
            android:onClick="clearDb"/>
</android.support.constraint.ConstraintLayout>